--- a/src/components/FoodItem/FoodItem.module.css
+++ b/src/components/FoodItem/FoodItem.module.css
@@ -6,7 +6,8 @@
     gap: 1rem;
     align-items: center;
     border-radius: 7px;
-    box-shadow: 0 0 8px rgba(0,0,0,0.8);
+    border: 3px dashed var(--light-black);
+    /* box-shadow: 0 0 8px rgba(0,0,0,0.8); */
 }
 
 .name {
