--- a/src/pages/Checkout/Checkout.module.css
+++ b/src/pages/Checkout/Checkout.module.css
@@ -4,19 +4,67 @@
     display: flex;
     justify-content: center;
     /* text-align: center; */
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
+    overflow-x: scroll;
     gap: 1rem;
+    overflow-y: scroll;
+}
+
+.checkout::-webkit-scrollbar {
+    display: none;
+}
+
+.notif {
+    background-color: white;
+    padding: 1rem;
+    border-radius: 7px;
+    /* width: 90%; */
+    font-size: 1.5rem;
+    border: 2px dashed var(--light-black);
+}
+
+.notif a {
+    font-style:italic;
+    text-decoration: none;
+    color:rgb(66, 125, 235);
+}
+
+.notif a:hover {
+    text-decoration: underline;
+}
+
+.overlay {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.8);
+    position: absolute;
+    top: 0;
+    z-index: 5;
+    backdrop-filter:blur(8px);
+}
+
+.model {
+    background-color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 1.5rem;
+    font-size: 1.5rem;
+    border-radius: 8px;
+    z-index: 8;
 }
 
 .cart {
     /* border: 3px solid black; */
-    min-width: 600px;
-    width: 350px;
-    height: 100px;
+    min-width: 400px;
+    width: 700px;
+    /* max-height: 100px; */
     display: inline-block;
     height: 600px;
     overflow: scroll;
     padding: 8px;
+    margin-left: 1rem;
 }
 
 .cart::-webkit-scrollbar {
@@ -26,10 +74,11 @@
 .preview {
     /* border: 3px solid black; */
     display: inline-block;
-    min-width: 300px;
-    width: 300px;
+    min-width: 260px;
+    width: 400px;
     height: 200px;
-    box-shadow: 0 0 8px rgba(0,0,0,0.8);
+    /* box-shadow: 0 0 8px rgba(0,0,0,0.8); */
+    border: 3px dashed var(--light-black);
     background-color: white;
     border-radius: 7px;
     margin-top: 8px;
@@ -52,10 +101,11 @@
     cursor: pointer;
     transition: all 0.4s;
     font-size: 1.3rem;
+    margin-top: 1rem;
 }
 
 .preview div:last-of-type {
-    margin-top: 8px;
+    /* margin-top: 1rem; */
     display: flex;
     justify-content: center;
 }
