--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -7,7 +7,8 @@
     align-items: center;
     justify-content: space-between;
     border-radius: 7px;
-    box-shadow: 0 0 8px rgba(0,0,0,0.8);
+    /* box-shadow: 0 0 8px rgba(0,0,0,0.8); */
+    border: 3px dashed var(--light-black);
     margin-bottom: 10px;
 }
 
