--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,15 +5,26 @@
     padding: 1rem;
     background-color: var(--pink);
     font-family: "Ubuntu",Arial, Helvetica, sans-serif;
-    color: var(--black);
+    color: var(--light-pink);
     font-family: 1.2rem;
     border-bottom: 5px solid var(--black);
     margin-bottom: 1.2rem;
+    box-shadow: 0 8px 8px rgba(0,0,0,0.4);
+    z-index: 2;
+}
+
+.stick {
+    position: sticky;
+    top: 0;
 }
 
 .link {
     text-decoration: none;
-    color: var(--black);
+    color: white;
+}
+
+a {
+    text-decoration: none;
 }
 
 .cart {
