--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,6 +1,41 @@
 .home {
+    height: 89vh;
+    margin-top: -20px;
+    background-image: url("../../assets/v560-wan-07-summerfruit_1.jpg");
+    /* overflow: hidden; */
+    background-size: cover;
     display: flex;
-    padding: 1rem;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     gap: 1rem;
+}
+
+.home p:first-of-type {
+    font-size: 4rem;
+    font-weight: bold;
+    letter-spacing: 5px;
+}
+
+.home p:last-of-type {
+    font-size: 1.6rem;
+}
+
+.home a {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+    background-color: var(--black);
+    color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 7px;
+    transition: all 0.5s;
+    margin-top: 1rem;
+}
+
+.home a:hover {
+    transform: scale(1.2);
+    color: var(--black);
+    background-color: var(--light-pink);
 }
